--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@
     margin: 2%;
     padding: 5px;
     flex: 1 0 250px;
+    max-width: 400px;
+}
+
+.product img {
+    max-width: 99%;
 }
 
 .select span{
